src/main/java/com/auberer/compilerdesignlectureproject/antlr/gen/TInfParser.java
// Generated from TInf.g4 by ANTLR 4.13.1
package com.auberer.compilerdesignlectureproject.antlr.gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class TInfParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPE_INT=1, TYPE_DOUBLE=2, TYPE_STRING=3, TYPE_BOOL=4, TYPE_EMPTY=5, IF=6, 
		ELSE=7, WHILE=8, DO=9, FOR=10, FUNC=11, CNUF=12, RETURN=13, SWITCH=14, 
		CASE=15, DEFAULT=16, CALL=17, PRINT=18, TRUE=19, FALSE=20, LBRACE=21, 
		RBRACE=22, LPAREN=23, RPAREN=24, COMMA=25, COLON=26, PLUS=27, MINUS=28, 
		MUL=29, DIV=30, EQUAL=31, NOT_EQUAL=32, LOGICAL_AND=33, LOGICAL_OR=34, 
		SEMICOLON=35, ASSIGN=36, IDENTIFIER=37, INT_LIT=38, DOUBLE_LIT=39, STRING_LIT=40, 
		WS=41;
	public static final int
		RULE_entry = 0, RULE_stmtLst = 1, RULE_stmt = 2, RULE_type = 3, RULE_printBuiltinCall = 4, 
		RULE_ifStmt = 5, RULE_afterIf = 6, RULE_elsePre = 7, RULE_elsePost = 8, 
		RULE_else = 9, RULE_whileLoop = 10, RULE_doWhileLoop = 11, RULE_forLoop = 12, 
		RULE_switchStmt = 13, RULE_cases = 14, RULE_default = 15, RULE_fctDef = 16, 
		RULE_paramLst = 17, RULE_param = 18, RULE_logic = 19, RULE_fctCall = 20, 
		RULE_callParams = 21, RULE_varDecl = 22, RULE_assignStmt = 23, RULE_logicalExpr = 24, 
		RULE_compareExpr = 25, RULE_additiveExpr = 26, RULE_multiplicativeExpr = 27, 
		RULE_prefixExpr = 28, RULE_atomicExpr = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"entry", "stmtLst", "stmt", "type", "printBuiltinCall", "ifStmt", "afterIf", 
			"elsePre", "elsePost", "else", "whileLoop", "doWhileLoop", "forLoop", 
			"switchStmt", "cases", "default", "fctDef", "paramLst", "param", "logic", 
			"fctCall", "callParams", "varDecl", "assignStmt", "logicalExpr", "compareExpr", 
			"additiveExpr", "multiplicativeExpr", "prefixExpr", "atomicExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'int'", "'double'", "'string'", "'bool'", "'empty'", "'if'", "'else'", 
			"'while'", "'do'", "'for'", "'func'", "'cnuf'", "'return'", "'switch'", 
			"'case'", "'default'", "'call'", "'print'", "'true'", "'false'", "'{'", 
			"'}'", "'('", "')'", "','", "':'", "'+'", "'-'", "'*'", "'/'", "'=='", 
			"'!='", "'&&'", "'||'", "';'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPE_INT", "TYPE_DOUBLE", "TYPE_STRING", "TYPE_BOOL", "TYPE_EMPTY", 
			"IF", "ELSE", "WHILE", "DO", "FOR", "FUNC", "CNUF", "RETURN", "SWITCH", 
			"CASE", "DEFAULT", "CALL", "PRINT", "TRUE", "FALSE", "LBRACE", "RBRACE", 
			"LPAREN", "RPAREN", "COMMA", "COLON", "PLUS", "MINUS", "MUL", "DIV", 
			"EQUAL", "NOT_EQUAL", "LOGICAL_AND", "LOGICAL_OR", "SEMICOLON", "ASSIGN", 
			"IDENTIFIER", "INT_LIT", "DOUBLE_LIT", "STRING_LIT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TInf.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TInfParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntryContext extends ParserRuleContext {
		public List<FctDefContext> fctDef() {
			return getRuleContexts(FctDefContext.class);
		}
		public FctDefContext fctDef(int i) {
			return getRuleContext(FctDefContext.class,i);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNC) {
				{
				{
				setState(60);
				fctDef();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtLstContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<IfStmtContext> ifStmt() {
			return getRuleContexts(IfStmtContext.class);
		}
		public IfStmtContext ifStmt(int i) {
			return getRuleContext(IfStmtContext.class,i);
		}
		public List<WhileLoopContext> whileLoop() {
			return getRuleContexts(WhileLoopContext.class);
		}
		public WhileLoopContext whileLoop(int i) {
			return getRuleContext(WhileLoopContext.class,i);
		}
		public List<DoWhileLoopContext> doWhileLoop() {
			return getRuleContexts(DoWhileLoopContext.class);
		}
		public DoWhileLoopContext doWhileLoop(int i) {
			return getRuleContext(DoWhileLoopContext.class,i);
		}
		public List<ForLoopContext> forLoop() {
			return getRuleContexts(ForLoopContext.class);
		}
		public ForLoopContext forLoop(int i) {
			return getRuleContext(ForLoopContext.class,i);
		}
		public List<SwitchStmtContext> switchStmt() {
			return getRuleContexts(SwitchStmtContext.class);
		}
		public SwitchStmtContext switchStmt(int i) {
			return getRuleContext(SwitchStmtContext.class,i);
		}
		public StmtLstContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtLst; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitStmtLst(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtLstContext stmtLst() throws RecognitionException {
		StmtLstContext _localctx = new StmtLstContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmtLst);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2061997328254L) != 0)) {
				{
				setState(72);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TYPE_INT:
				case TYPE_DOUBLE:
				case TYPE_STRING:
				case TYPE_BOOL:
				case TYPE_EMPTY:
				case CALL:
				case PRINT:
				case TRUE:
				case FALSE:
				case LPAREN:
				case PLUS:
				case MINUS:
				case IDENTIFIER:
				case INT_LIT:
				case DOUBLE_LIT:
				case STRING_LIT:
					{
					setState(66);
					stmt();
					}
					break;
				case IF:
					{
					setState(67);
					ifStmt();
					}
					break;
				case WHILE:
					{
					setState(68);
					whileLoop();
					}
					break;
				case DO:
					{
					setState(69);
					doWhileLoop();
					}
					break;
				case FOR:
					{
					setState(70);
					forLoop();
					}
					break;
				case SWITCH:
					{
					setState(71);
					switchStmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(TInfParser.SEMICOLON, 0); }
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_INT:
			case TYPE_DOUBLE:
			case TYPE_STRING:
			case TYPE_BOOL:
			case TYPE_EMPTY:
				{
				setState(77);
				varDecl();
				}
				break;
			case CALL:
			case PRINT:
			case TRUE:
			case FALSE:
			case LPAREN:
			case PLUS:
			case MINUS:
			case IDENTIFIER:
			case INT_LIT:
			case DOUBLE_LIT:
			case STRING_LIT:
				{
				setState(78);
				assignStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(81);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode TYPE_INT() { return getToken(TInfParser.TYPE_INT, 0); }
		public TerminalNode TYPE_DOUBLE() { return getToken(TInfParser.TYPE_DOUBLE, 0); }
		public TerminalNode TYPE_STRING() { return getToken(TInfParser.TYPE_STRING, 0); }
		public TerminalNode TYPE_BOOL() { return getToken(TInfParser.TYPE_BOOL, 0); }
		public TerminalNode TYPE_EMPTY() { return getToken(TInfParser.TYPE_EMPTY, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 62L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrintBuiltinCallContext extends ParserRuleContext {
		public TerminalNode PRINT() { return getToken(TInfParser.PRINT, 0); }
		public TerminalNode LPAREN() { return getToken(TInfParser.LPAREN, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TInfParser.RPAREN, 0); }
		public PrintBuiltinCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printBuiltinCall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitPrintBuiltinCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintBuiltinCallContext printBuiltinCall() throws RecognitionException {
		PrintBuiltinCallContext _localctx = new PrintBuiltinCallContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_printBuiltinCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(PRINT);
			setState(86);
			match(LPAREN);
			setState(87);
			logicalExpr();
			setState(88);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfStmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(TInfParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(TInfParser.LPAREN, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TInfParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(TInfParser.LBRACE, 0); }
		public StmtLstContext stmtLst() {
			return getRuleContext(StmtLstContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(TInfParser.RBRACE, 0); }
		public AfterIfContext afterIf() {
			return getRuleContext(AfterIfContext.class,0);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStmtContext ifStmt() throws RecognitionException {
		IfStmtContext _localctx = new IfStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(IF);
			setState(91);
			match(LPAREN);
			setState(92);
			logicalExpr();
			setState(93);
			match(RPAREN);
			setState(94);
			match(LBRACE);
			setState(95);
			stmtLst();
			setState(96);
			match(RBRACE);
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(97);
				afterIf();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AfterIfContext extends ParserRuleContext {
		public ElsePreContext elsePre() {
			return getRuleContext(ElsePreContext.class,0);
		}
		public ElsePostContext elsePost() {
			return getRuleContext(ElsePostContext.class,0);
		}
		public AfterIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_afterIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitAfterIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AfterIfContext afterIf() throws RecognitionException {
		AfterIfContext _localctx = new AfterIfContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_afterIf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			elsePre();
			setState(101);
			elsePost();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElsePreContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(TInfParser.ELSE, 0); }
		public ElsePreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsePre; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitElsePre(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElsePreContext elsePre() throws RecognitionException {
		ElsePreContext _localctx = new ElsePreContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elsePre);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(ELSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElsePostContext extends ParserRuleContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public ElseContext else_() {
			return getRuleContext(ElseContext.class,0);
		}
		public ElsePostContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsePost; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitElsePost(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElsePostContext elsePost() throws RecognitionException {
		ElsePostContext _localctx = new ElsePostContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_elsePost);
		try {
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
				enterOuterAlt(_localctx, 1);
				{
				setState(105);
				ifStmt();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 2);
				{
				setState(106);
				else_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(TInfParser.LBRACE, 0); }
		public StmtLstContext stmtLst() {
			return getRuleContext(StmtLstContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(TInfParser.RBRACE, 0); }
		public ElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitElse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseContext else_() throws RecognitionException {
		ElseContext _localctx = new ElseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_else);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(LBRACE);
			setState(110);
			stmtLst();
			setState(111);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileLoopContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(TInfParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(TInfParser.LPAREN, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TInfParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(TInfParser.LBRACE, 0); }
		public StmtLstContext stmtLst() {
			return getRuleContext(StmtLstContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(TInfParser.RBRACE, 0); }
		public WhileLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileLoop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitWhileLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileLoopContext whileLoop() throws RecognitionException {
		WhileLoopContext _localctx = new WhileLoopContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_whileLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(WHILE);
			setState(114);
			match(LPAREN);
			setState(115);
			logicalExpr();
			setState(116);
			match(RPAREN);
			setState(117);
			match(LBRACE);
			setState(118);
			stmtLst();
			setState(119);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoWhileLoopContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(TInfParser.DO, 0); }
		public TerminalNode LBRACE() { return getToken(TInfParser.LBRACE, 0); }
		public StmtLstContext stmtLst() {
			return getRuleContext(StmtLstContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(TInfParser.RBRACE, 0); }
		public TerminalNode WHILE() { return getToken(TInfParser.WHILE, 0); }
		public TerminalNode LPAREN() { return getToken(TInfParser.LPAREN, 0); }
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TInfParser.RPAREN, 0); }
		public TerminalNode SEMICOLON() { return getToken(TInfParser.SEMICOLON, 0); }
		public DoWhileLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doWhileLoop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitDoWhileLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DoWhileLoopContext doWhileLoop() throws RecognitionException {
		DoWhileLoopContext _localctx = new DoWhileLoopContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_doWhileLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(DO);
			setState(122);
			match(LBRACE);
			setState(123);
			stmtLst();
			setState(124);
			match(RBRACE);
			setState(125);
			match(WHILE);
			setState(126);
			match(LPAREN);
			setState(127);
			logicalExpr();
			setState(128);
			match(RPAREN);
			setState(129);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForLoopContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(TInfParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(TInfParser.LPAREN, 0); }
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(TInfParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(TInfParser.SEMICOLON, i);
		}
		public LogicalExprContext logicalExpr() {
			return getRuleContext(LogicalExprContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(TInfParser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(TInfParser.LBRACE, 0); }
		public StmtLstContext stmtLst() {
			return getRuleContext(StmtLstContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(TInfParser.RBRACE, 0); }
		public ForLoopContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forLoop; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TInfVisitor ) return ((TInfVisitor<? extends T>)visitor).visitForLoop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForLoopContext forLoop() throws RecognitionException {
		ForLoopContext _localctx = new ForLoopContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_forLoop);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(FOR);
			setState(132);
			match(LPAREN);
			setState(133);
			varDecl();
			setState(134);
			match(SEMICOLON);
			setState(135);
			logicalExpr();
			setState(136);
			match(SEMICOLON);
			setState(137);
			assignStmt();
			setState(138);
			match(RPAREN);
			setState(139);
			match(LBRACE);
			setState(140);
			stmtLst();
			setState(141);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
